# S3FPLegacy

./: Makefile.am  s3fp-install.py  setup_cc.sh
examples/: Makefile.am
examples/lib/div_geometric_primitives/.deps/: div_geometric_primitives.Plo
fpbench/: Makefile.am
fpbench/1_y_carthesianToPolar_radius/: Makefile  compile.sh  input.txt  s3fp_setting  test.cpp
fpbench/2_y_carthesianToPolar_theta/: clean.sh  input.txt  run.sh  s3fp_setting  test.cpp  variable.txt
fpbench/56_y_nmse_334/: Makefile  Makefile.am  clean.sh  input.txt  s3fp_setting  test.cpp
src/: EvaluationBasis.h  FP_UTILS.h  S3FP_Core.cpp  S3FP_Core.h  S3FP_ErrorOptimization.cpp  definitions.h
